force-app/main/default/objects/MCAPI_Config__mdt/MCAPI_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configurations for custom Marketing Cloud API integration</description>
    <label>Marketing Cloud API Config</label>
    <pluralLabel>Marketing Cloud API Configs</pluralLabel>
</CustomObject>