force-app/main/default/objects/MCAPI_Config__mdt/fields/Autopay_Reminder_Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Reminder_Journey_Id__c</fullName>
    <description>Event Definition Key for the Autopay Reminder journey in Marketing cloud</description>
    <label>Autopay Reminder Journey Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>