force-app/main/default/objects/MCAPI_Config__mdt/fields/Callouts_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Callouts_Per_Transaction__c</fullName>
    <description>Number of API callouts per transaction, if relevant</description>
    <inlineHelpText>Number of API callouts per transaction, if relevant</inlineHelpText>
    <label>Callouts Per Transaction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>