force-app/main/default/objects/MCAPI_Config__mdt/fields/Change_in_COD_Email_Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Change_in_COD_Email_Journey_Id__c</fullName>
    <description>Event definition key for the Change in COD email journey in marketing cloud</description>
    <label>Change in COD Email Journey Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>