force-app/main/default/objects/MCAPI_Config__mdt/fields/Credits_Flowing_Email_Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Credits_Flowing_Email_Journey_Id__c</fullName>
    <description>Event definition key for the Credits flowing email journey in Marketing cloud</description>
    <label>Credits Flowing Email Journey Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>