force-app/main/default/objects/MCAPI_Config__mdt/fields/Sandbox_Publish_to_Prod__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Publish_to_Prod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, API calls will be sent to Production Marketing Cloud in a sandbox. Use with caution, and ensure that this is UNCHECKED after testing in UAT.</description>
    <inlineHelpText>If checked, API calls will be sent to Production Marketing Cloud in a sandbox. Use with caution, and ensure that this is UNCHECKED after testing in UAT.</inlineHelpText>
    <label>Sandbox Publish to Prod</label>
    <type>Checkbox</type>
</CustomField>